# Eventer

./: .gitignore  .tool-versions  Cargo.toml  README.md  build.sh  bun.lockb  canister_ids.json  deploy.sh  deploy_log.txt  dfx.json  package-lock.json  package.json  transfer-test.sh
src/app_backend/: Cargo.toml  app_backend.did
src/app_backend/src/: lib.rs
src/app_backend/src/component/: contact.rs  mod.rs
src/app_backend/src/controller/: admin_e.rs  event_controller.rs  event_online_controller.rs  mod.rs  tags_controller.rs  token_transfer.rs  user_controller.rs
src/app_backend/src/dto_request/: event_dto_request.rs  event_online_dto_request.rs  mod.rs  request.rs  user_dto_request.rs
src/app_backend/src/dto_response/: event_dto_response.rs  event_online_dto_response.rs  mod.rs  response.rs
src/app_backend/src/error/: event_error.rs  event_online_error.rs  mod.rs  tag_error.rs  user_error.rs
src/app_backend/src/init/: def_tags.rs  init_tags.rs  mod.rs
src/app_backend/src/model/: event.rs  event_model.rs  event_online_model.rs  mod.rs  tag_model.rs  user.rs  user_model.rs
src/app_backend/src/repository/: event_id_repository.rs  event_online_repository.rs  event_repository.rs  mod.rs  tag_repository.rs  user_repository.rs
src/app_backend/src/service/: event.rs  mod.rs  user.rs
src/app_backend/src/service/query/: event_online_service_query.rs  event_repository_query.rs  event_service_query.rs  mod.rs  tag_service_query.rs  (+2 more)
src/app_backend/src/ticket/: mod.rs  public_key.rs  ticket.rs
src/storage/: Cargo.toml  storage.did
src/storage/src/: lib.rs
(+95 files in other folders)
