[package]
name = "app_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
sha2 = "0.10"  # Make sure to use the latest version
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
#warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
icrc-ledger-types = "0.1.5"
#serde_json = "1.0"
