[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.0"
# ciborium = "0.2.1"
crc32fast = "1.3.2"
ic-cdk = "0.13.0"
ic-cdk-macros = "0.13.2"
ic-stable-memory = "0.4.4"
serde = "1.0.178"
ic-stable-structures = "0.6.0" 




